Fixing the brand font size & spacing

--- a/public/stylesheets/hopper.css
+++ b/public/stylesheets/hopper.css
@@ -19,8 +19,8 @@ body {
 
 .brand {
   float: left;
-  margin-left: 30px;
   font-weight: bold;
+  font-size: 250%;
   color: black;
 }
 
@@ -360,7 +360,7 @@ body {
   .hamburger {
     float: left;
     margin-left: 20px;
-    margin-right: 15px;
+    margin-right: 20px;
 
     cursor: pointer;
   }
@@ -371,10 +371,6 @@ body {
     background-color: black;
     margin: 7px 0px;
     border-radius: 5px;
-  }
-
-  .brand {
-    font-size: 2.5em;
   }
 
   .brand > img {
@@ -467,13 +463,11 @@ body {
   .brand {
     display: flex;
     align-items: center;
-
-    font-size: 4vh;
   }
 
   .brand > img {
     width: 50px;
-    margin-right: 15px;
+    margin: 0 20px 0 30px;
   }
 
   .content {
